[gd_scene load_steps=5 format=3 uid="uid://pxiyat8003a4"]

[ext_resource type="Script" path="res://cable.gd" id="1_slf8d"]
[ext_resource type="Texture2D" uid="uid://dom2e1i6283xf" path="res://sprites/plug.png" id="2_44r41"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_awmhr"]
size = Vector2(12, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kobgt"]
size = Vector2(12, 18)

[node name="cable" type="Node2D" groups=["cables"]]
script = ExtResource("1_slf8d")

[node name="cableCord" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 0)
width = 3.0
default_color = Color(0.356863, 0.501961, 1, 1)

[node name="plug1" type="Sprite2D" parent="."]
position = Vector2(-30, 0)
texture = ExtResource("2_44r41")

[node name="Area2D" type="Area2D" parent="plug1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="plug1/Area2D"]
shape = SubResource("RectangleShape2D_awmhr")

[node name="plug2" type="Sprite2D" parent="."]
position = Vector2(30, 0)
texture = ExtResource("2_44r41")

[node name="Area2D" type="Area2D" parent="plug2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="plug2/Area2D"]
shape = SubResource("RectangleShape2D_kobgt")

[connection signal="area_entered" from="plug1/Area2D" to="." method="_on_plug_1_area_2d_area_entered"]
[connection signal="area_exited" from="plug1/Area2D" to="." method="_on_plug_1_area_2d_area_exited"]
[connection signal="input_event" from="plug1/Area2D" to="." method="_on_plug_1_area_2d_input_event"]
[connection signal="mouse_entered" from="plug1/Area2D" to="." method="_on_plug_1_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="plug1/Area2D" to="." method="_on_plug_1_area_2d_mouse_exited"]
[connection signal="area_entered" from="plug2/Area2D" to="." method="_on_plug_2_area_2d_area_entered"]
[connection signal="area_exited" from="plug2/Area2D" to="." method="_on_plug_2_area_2d_area_exited"]
[connection signal="input_event" from="plug2/Area2D" to="." method="_on_plug_2_area_2d_input_event"]
[connection signal="mouse_entered" from="plug2/Area2D" to="." method="_on_plug_2_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="plug2/Area2D" to="." method="_on_plug_2_area_2d_mouse_exited"]
